# DORADO

./: .gitignore  .readthedocs.yml  233310793_june_lc.fits  236445129_june_lc.fits  AICO-XX-Cyg-paper.ipynb  AICO_XX_Cyg_timestrings.csv  CHANGES.rst  DYPEG.fits  FourierTest.ipynb  MANIFEST.in  README.md  README.rst  TESS-BL-Cam-paper.ipynb  TESS-XX-Cyg-paper.ipynb  TESS-XX-Cyg.ipynb  TESS_KELT-16b_3070.html  TESS_KELT-16b_3070.ipynb  TESS_KELT-16b_TEST.py  TESSt.py  Untitled.ipynb  beginner_how_to_use_lc.ipynb  blcam_lc_1.csv  blcam_toml_1.csv  blcam_toml_1.fits  bullhouse.py  celtic.py  demo_draco.py  disp.py  draco.code-workspace  draco.py  dracoOP2.py  flatest.py  flatzoom.py  header-demo.py  im_reduc.ipynb  im_reduc.py  june_mask.py  lc_tbl15a_prv_2.csv  lc_tbl15a_prv_3.csv  lc_tbl20.fit  (+45 more)
.ipynb_checkpoints/: AICO-XX-Cyg-paper-checkpoint.ipynb  FourierTest-checkpoint.ipynb  TESS-BL-Cam-paper-checkpoint.ipynb  TESS-XX-Cyg-checkpoint.ipynb  TESS-XX-Cyg-paper-checkpoint.ipynb  TESS_KELT-16b_3070-checkpoint.ipynb  Untitled1-checkpoint.ipynb  beginner_how_to_use_lc-checkpoint.ipynb  beginner_how_to_use_tp-checkpoint.ipynb  draco-checkpoint.py  im_reduc-checkpoint.ipynb  master_lightcurve-checkpoint.ipynb
Draco_Bolide/: fournax.py  graf.py  phanal.py  rchive.py  vishi_test.py
Misc_files/: Untitled1.ipynb  YZBoo.fits  beginner_how_to_use_tp.ipynb
assets/: Full Time String.txt  Recent Be Lyn Time String.txt
assets/graphs/: th.jfif
docs/: Makefile  conf.py  index.rst
docs/dorado/: Getting-Started.rst  GettingStarted.rst  README.rst  ceres.rst  clippy.rst  core.rst  dorphot.rst  filer.rst  index.rst  puttingItTogether.rst  reader.rst  stack.rst  target.rst
docs/draco/: index.rst
docs/imreduc/: index.rst
dorado/: __init__.py  _astropy_init.py  conftest.py  rchive.py  teleanal.py
dorado/ceres/: __init__.py  ceres.py  ceresClass.py
dorado/clippy/: __init__.py  ceres.py  ceres_copy.py  clippy.py  clippyClass.py
dorado/config/: __init__.py  config.py
dorado/core/: __init__.py  coreClass.py  (+1 more)
draco/: __init__.py  example_mod.py  fournax.py  graf.py  phanal.py  rchive.py  setup.py  teleanal.py
licenses/: LICENSE.rst
(+50 files in other folders)
