[metadata]
name = dorado
author = Mucephie
author_email = mucephie@my.yorku.ca
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/Mucephie/DORADO
description = Digitized Observatory Resources for Automated Data Operations
long_description = file: */docs/dorado/README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = Mucephie/DORADO
version="2.0.3"

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy
    astroquery
    matplotlib
    ccdprocx
    photutils
    astroalign
    scipy
    tqdm
    lightkurve

[options.entry_points]
console_scripts =
    # Put user config script here
    # astropy-package-template-example = packagename.example_mod:main


[options.extras_require]
all =
    scipy
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
dorado = data/*

[tool:pytest]
testpaths = "dorado" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    dorado/_astropy_init*
    dorado/conftest.py
    dorado/*setup_package*
    dorado/tests/*
    dorado/*/tests/*
    dorado/extern/*
    dorado/version*
    */dorado/_astropy_init*
    */dorado/conftest.py
    */dorado/*setup_package*
    */dorado/tests/*
    */dorado/*/tests/*
    */dorado/extern/*
    */dorado/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_


